# fiap-mlops-quantumfinance

./: .gitignore  LICENSE  Makefile  README.md  data.dvc  pyproject.toml  requirements.txt
.dvc/: config
